manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service

spec:
  type: NodePort

  selector:
    app: flask-app

  ports:
  - port: 80
    targetPort: 5000
